# hu-datasets

./: README.md  __init__.py  pyproject.toml  setup.py
datasets/taco/: download.py
hu_datasets/: DatasetDownloader.py  __init__.py  download.py  download_cifar10.py  download_clevr_count.py  download_rsna.py  download_taco.py  download_trashnet.py  utils.py
hu_datasets/cifar10/: download.py
hu_datasets/rsna/: download.py
hu_datasets/taco/: download.py
hu_datasets/trashnet/: Makefile  __init__.py  download.py
rsna2/: download.py
taco/: download.py
